// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FindOneArgsType should create an args type with a custom ID type 1`] = `
"\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test(
    \\"\\"\\"The id of the record to find.\\"\\"\\"
    id: String!
  ): Int!
}"
`;

exports[`FindOneArgsType should create an args type with id field as the type 1`] = `
"\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test(
    \\"\\"\\"The id of the record to find.\\"\\"\\"
    id: ID!
  ): Int!
}"
`;
